# qt-desktop-notify

./: .gitignore  CMakeLists.txt  README.md  notify.pro  resources.qrc
scripts/: Import-Dependencies.ps1  Robocopy.ps1  build.sh  generate_qrc.sh  update_version.sh
src/: main.cpp  resources.cpp  resources.h  version.cpp  version.h
